# corp-govt-watchdog

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2f3a30a8a64a_.py  351db1573a20_.py  e89107fd293c_.py
app/: settings.py  types.py
app/models/: base.py  factory.py  tables.py
app/rest_api/: chat.py  login.py
app/server/: main.py
corp-govt-watchdog/: next.config.ts  package-lock.json  package.json
corp-govt-watchdog/components/: Footer.tsx  Sidebar.tsx
corp-govt-watchdog/src/: api.ts
corp-govt-watchdog/src/app/: globals.css  layout.tsx  page.tsx
corp-govt-watchdog/src/app/campaigns/: page.tsx
corp-govt-watchdog/src/components/: Footer.tsx  Sidebar.tsx
watchdog/: index.html  package-lock.json  package.json
watchdog-html/: index.html
watchdog-html/.next/: trace
watchdog-html/.next/cache/: .rscinfo
watchdog-html/.next/cache/webpack/client-development/: index.pack.gz.old
watchdog-html/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
watchdog-html/.next/server/app/: page.js  page_client-reference-manifest.js
watchdog-html/.next/server/vendor-chunks/: @swc.js  next.js
watchdog-html/.next/static/chunks/: app-pages-internals.js  webpack.js
watchdog-html/.next/static/chunks/app/: layout.js  page.js
watchdog-html/.next/static/webpack/: webpack.2b0f040e9948baef.hot-update.js
watchdog-html/.next/types/app/: layout.ts  page.ts
watchdog/components/: AuthForm.tsx
watchdog/css/: style.css
(+2 files in other folders)
